# hisenser

./: .gitignore  README.md  README2.md  pyproject.toml
.assets/: mockup.f0
.assets/raw/icon.icon/: icon.json
.github/: FUNDING.yml
hisenser/: __init__.py
scripts/: setup_absolute.sh  setup_relative.sh
tests/: test_hisenser.py
